--- a/.config/weechat/weechat.conf
+++ b/.config/weechat/weechat.conf
@@ -170,6 +170,8 @@ chat_prefix_network = magenta
 chat_prefix_quit = lightred
 chat_prefix_suffix = red
 chat_read_marker = red
+chat_read_marker_bg = default
+chat_server = brown
 chat_tags = red
 chat_text_found = yellow
 chat_text_found_bg = lightmagenta
@@ -336,20 +338,21 @@ default.buffer = "irc;freenode.##C;6"
 default.buffer = "irc;freenode.#cat-v;7"
 default.buffer = "irc;freenode.#go-nuts;8"
 default.buffer = "irc;freenode.#haskell;9"
-default.buffer = "irc;freenode.#xcb;10"
-default.buffer = "irc;server.irchighway;11"
-default.buffer = "irc;server.lainchan;12"
-default.buffer = "irc;server.mozilla;13"
-default.buffer = "irc;mozilla.#rust;14"
-default.buffer = "irc;server.nixers;15"
-default.buffer = "irc;server.overthewire;16"
-default.buffer = "irc;server.rizon;17"
-default.buffer = "irc;rizon.#code;18"
-default.buffer = "irc;rizon.#Hentai;19"
-default.buffer = "irc;rizon.#rice;20"
-default.buffer = "irc;server.unixchat;21"
+default.buffer = "irc;freenode.#lispcafe;10"
+default.buffer = "irc;freenode.#xcb;11"
+default.buffer = "irc;server.irchighway;12"
+default.buffer = "irc;server.lainchan;13"
+default.buffer = "irc;server.mozilla;14"
+default.buffer = "irc;mozilla.#rust;15"
+default.buffer = "irc;server.nixers;16"
+default.buffer = "irc;server.overthewire;17"
+default.buffer = "irc;server.rizon;18"
+default.buffer = "irc;rizon.#code;19"
+default.buffer = "irc;rizon.#Hentai;20"
+default.buffer = "irc;rizon.#rice;21"
+default.buffer = "irc;server.unixchat;22"
 default.window = "1;0;5;1;-;-"
-default.window = "2;1;0;0;irc;rizon.#code"
+default.window = "2;1;0;0;irc;rizon.#rice"
 default.window = "3;1;0;0;perl;highmon"
 default.current = on
 
