update scripts (and steal more from marin)

--- a/.config/weechat/weechat.conf
+++ b/.config/weechat/weechat.conf
@@ -338,21 +338,24 @@ default.buffer = "irc;freenode.##C;6"
 default.buffer = "irc;freenode.#cat-v;7"
 default.buffer = "irc;freenode.#go-nuts;8"
 default.buffer = "irc;freenode.#haskell;9"
-default.buffer = "irc;freenode.#lispcafe;10"
+default.buffer = "irc;freenode.#racket;10"
 default.buffer = "irc;freenode.#xcb;11"
-default.buffer = "irc;server.irchighway;12"
-default.buffer = "irc;server.lainchan;13"
-default.buffer = "irc;server.mozilla;14"
-default.buffer = "irc;mozilla.#rust;15"
-default.buffer = "irc;server.nixers;16"
-default.buffer = "irc;server.overthewire;17"
-default.buffer = "irc;server.rizon;18"
-default.buffer = "irc;rizon.#code;19"
-default.buffer = "irc;rizon.#Hentai;20"
-default.buffer = "irc;rizon.#rice;21"
-default.buffer = "irc;server.unixchat;22"
+default.buffer = "irc;freenode.lambdabot;12"
+default.buffer = "irc;server.irchighway;13"
+default.buffer = "irc;server.lainchan;14"
+default.buffer = "irc;server.mozilla;15"
+default.buffer = "irc;mozilla.#rust;16"
+default.buffer = "irc;server.nixers;17"
+default.buffer = "irc;server.overthewire;18"
+default.buffer = "irc;server.rizon;19"
+default.buffer = "irc;rizon.#code;20"
+default.buffer = "irc;rizon.#commie;21"
+default.buffer = "irc;rizon.#commie-subs;22"
+default.buffer = "irc;rizon.#Hentai;23"
+default.buffer = "irc;rizon.#rice;24"
+default.buffer = "irc;server.unixchat;25"
 default.window = "1;0;5;1;-;-"
-default.window = "2;1;0;0;irc;rizon.#rice"
+default.window = "2;1;0;0;irc;rizon.#code"
 default.window = "3;1;0;0;perl;highmon"
 default.current = on
 
