cute scripts uwu

--- a/.config/weechat/weechat.conf
+++ b/.config/weechat/weechat.conf
@@ -291,7 +291,7 @@ nicklist.color_fg = default
 nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = off
+nicklist.hidden = on
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -338,22 +338,18 @@ default.buffer = "irc;freenode.##C;6"
 default.buffer = "irc;freenode.#cat-v;7"
 default.buffer = "irc;freenode.#go-nuts;8"
 default.buffer = "irc;freenode.#haskell;9"
-default.buffer = "irc;freenode.#racket;10"
-default.buffer = "irc;freenode.#xcb;11"
-default.buffer = "irc;freenode.lambdabot;12"
-default.buffer = "irc;server.irchighway;13"
-default.buffer = "irc;server.lainchan;14"
-default.buffer = "irc;server.mozilla;15"
-default.buffer = "irc;mozilla.#rust;16"
-default.buffer = "irc;server.nixers;17"
-default.buffer = "irc;server.overthewire;18"
-default.buffer = "irc;server.rizon;19"
-default.buffer = "irc;rizon.#code;20"
-default.buffer = "irc;rizon.#commie;21"
-default.buffer = "irc;rizon.#commie-subs;22"
-default.buffer = "irc;rizon.#Hentai;23"
-default.buffer = "irc;rizon.#rice;24"
-default.buffer = "irc;server.unixchat;25"
+default.buffer = "irc;freenode.#xcb;10"
+default.buffer = "irc;server.irchighway;11"
+default.buffer = "irc;server.lainchan;12"
+default.buffer = "irc;server.mozilla;13"
+default.buffer = "irc;mozilla.#rust;14"
+default.buffer = "irc;server.nixers;15"
+default.buffer = "irc;server.overthewire;16"
+default.buffer = "irc;server.rizon;17"
+default.buffer = "irc;rizon.#code;18"
+default.buffer = "irc;rizon.#Hentai;19"
+default.buffer = "irc;rizon.#rice;20"
+default.buffer = "irc;server.unixchat;21"
 default.window = "1;0;5;1;-;-"
 default.window = "2;1;0;0;irc;rizon.#code"
 default.window = "3;1;0;0;perl;highmon"
