--- a/.config/weechat/weechat.conf
+++ b/.config/weechat/weechat.conf
@@ -291,7 +291,7 @@ nicklist.color_fg = default
 nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = on
+nicklist.hidden = off
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -327,38 +327,84 @@ title.separator = on
 title.size = 1
 title.size_max = 0
 title.type = root
+urlselect.color_bg = default
+urlselect.color_delim = cyan
+urlselect.color_fg = default
+urlselect.conditions = "active"
+urlselect.filling_left_right = vertical
+urlselect.filling_top_bottom = horizontal
+urlselect.hidden = on
+urlselect.items = "[urlselect_title],#urlselect_index,(urlselect_duplicate),[urlselect_buffer_name],<urlselect_nick>,urlselect_message,urlselect_status"
+urlselect.position = top
+urlselect.priority = 3000
+urlselect.separator = on
+urlselect.size = 0
+urlselect.size_max = 2
+urlselect.type = root
+urlselect_help.color_bg = default
+urlselect_help.color_delim = cyan
+urlselect_help.color_fg = default
+urlselect_help.conditions = "active"
+urlselect_help.filling_left_right = vertical
+urlselect_help.filling_top_bottom = columns_horizontal
+urlselect_help.hidden = off
+urlselect_help.items = "urlselect_help"
+urlselect_help.position = top
+urlselect_help.priority = 2998
+urlselect_help.separator = on
+urlselect_help.size = 0
+urlselect_help.size_max = 6
+urlselect_help.type = root
+urlselect_search.color_bg = default
+urlselect_search.color_delim = cyan
+urlselect_search.color_fg = default
+urlselect_search.conditions = "active"
+urlselect_search.filling_left_right = vertical
+urlselect_search.filling_top_bottom = horizontal
+urlselect_search.hidden = on
+urlselect_search.items = "urlselect_search,input_text"
+urlselect_search.position = top
+urlselect_search.priority = 2999
+urlselect_search.separator = on
+urlselect_search.size = 0
+urlselect_search.size_max = 1
+urlselect_search.type = root
 
 [layout]
 default.buffer = "core;weechat;1"
 default.buffer = "core;highmon;2"
-default.buffer = "perl;highmon;3"
-default.buffer = "irc;server.freenode;4"
-default.buffer = "irc;freenode.#bspwm;5"
-default.buffer = "irc;freenode.##C;6"
-default.buffer = "irc;freenode.#cat-v;7"
-default.buffer = "irc;freenode.#go-nuts;8"
-default.buffer = "irc;freenode.#haskell;9"
-default.buffer = "irc;freenode.#xcb;10"
-default.buffer = "irc;server.irchighway;11"
-default.buffer = "irc;server.lainchan;12"
-default.buffer = "irc;server.mozilla;13"
-default.buffer = "irc;mozilla.#rust;14"
-default.buffer = "irc;server.nixers;15"
-default.buffer = "irc;server.overthewire;16"
-default.buffer = "irc;server.rizon;17"
-default.buffer = "irc;rizon.#code;18"
-default.buffer = "irc;rizon.#Hentai;19"
-default.buffer = "irc;rizon.#rice;20"
-default.buffer = "irc;server.unixchat;21"
+default.buffer = "lua;matrix;3"
+default.buffer = "perl;highmon;4"
+default.buffer = "irc;server.freenode;5"
+default.buffer = "irc;freenode.#bspwm;6"
+default.buffer = "irc;freenode.##C;7"
+default.buffer = "irc;freenode.#cat-v;8"
+default.buffer = "irc;freenode.#go-nuts;9"
+default.buffer = "irc;freenode.#guix;10"
+default.buffer = "irc;freenode.#haskell;11"
+default.buffer = "irc;freenode.#haskell-blah;12"
+default.buffer = "irc;freenode.#racket;13"
+default.buffer = "irc;freenode.#xcb;14"
+default.buffer = "irc;server.irchighway;15"
+default.buffer = "irc;server.lainchan;16"
+default.buffer = "irc;server.mozilla;17"
+default.buffer = "irc;mozilla.#rust;18"
+default.buffer = "irc;server.nixers;19"
+default.buffer = "irc;server.overthewire;20"
+default.buffer = "irc;server.rizon;21"
+default.buffer = "irc;rizon.#code;22"
+default.buffer = "irc;rizon.#Hentai;23"
+default.buffer = "irc;rizon.#rice;24"
+default.buffer = "irc;server.unixchat;25"
 default.window = "1;0;5;1;-;-"
-default.window = "2;1;0;0;irc;rizon.#code"
+default.window = "2;1;0;0;irc;freenode.#go-nuts"
 default.window = "3;1;0;0;perl;highmon"
 default.current = on
 
 [notify]
 
 [filter]
-joinquit = on;*;irc_join,irc_part,irc_quit;*
+joinquit = off;*;irc_join,irc_part,irc_quit;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
