--- a/.ghc/ghci.conf
+++ b/.ghc/ghci.conf
@@ -1,3 +1,4 @@
 :set prompt "\ESC[1;34m\STX%s\n\ESC[0;34m\STXλ> \ESC[m\STX"
 :set prompt-cont "\ESC[0;34m\STXλ: \ESC[m\STX"
 :set +m
+:set -XTypeApplications
