things and stuff

--- a/.config/weechat/irc.conf
+++ b/.config/weechat/irc.conf
@@ -128,7 +128,7 @@ ipv6 = on
 local_hostname = ""
 msg_kick = ""
 msg_part = "WeeChat ${info:version}"
-msg_quit = "WeeChat ${info:version}"
+msg_quit = "leaving..."
 nicks = "ym"
 nicks_alternate = on
 notify = ""
@@ -180,7 +180,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin = "##C,#go-nuts,#cat-v,#haskell,#xcb,#bspwm"
+freenode.autojoin = "##C,#go-nuts,#cat-v,#haskell,#xcb,#bspwm,#guile,##cordance,#scheme,#guix,#racket,#nixos,#lispcafe,#lisp"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -189,7 +189,7 @@ freenode.anti_flood_prio_low
 freenode.away_check
 freenode.away_check_max_nicks
 freenode.msg_kick
-freenode.msg_part
+freenode.msg_part = "leaving..."
 freenode.msg_quit
 freenode.notify
 freenode.split_msg_max_length
@@ -262,7 +262,7 @@ mozilla.local_hostname
 mozilla.usermode
 mozilla.command
 mozilla.command_delay
-mozilla.autojoin = "#rust"
+mozilla.autojoin = "#rust,#rust-beginners"
 mozilla.autorejoin
 mozilla.autorejoin_delay
 mozilla.connection_timeout
@@ -603,3 +603,126 @@ janouch.msg_part
 janouch.msg_quit
 janouch.notify
 janouch.split_msg_max_length
+discord.addresses = "127.0.0.1"
+discord.proxy
+discord.ipv6
+discord.ssl
+discord.ssl_cert
+discord.ssl_priorities
+discord.ssl_dhkey_size
+discord.ssl_fingerprint
+discord.ssl_verify
+discord.password = "${sec.data.discord}:361910177961738242"
+discord.capabilities
+discord.sasl_mechanism
+discord.sasl_username
+discord.sasl_password
+discord.sasl_key
+discord.sasl_timeout
+discord.sasl_fail
+discord.autoconnect
+discord.autoreconnect
+discord.autoreconnect_delay
+discord.nicks
+discord.nicks_alternate
+discord.username
+discord.realname
+discord.local_hostname
+discord.usermode
+discord.command
+discord.command_delay
+discord.autojoin
+discord.autorejoin
+discord.autorejoin_delay
+discord.connection_timeout
+discord.anti_flood_prio_high
+discord.anti_flood_prio_low
+discord.away_check
+discord.away_check_max_nicks
+discord.msg_kick
+discord.msg_part
+discord.msg_quit
+discord.notify
+discord.split_msg_max_length
+oftc.addresses = "irc.oftc.net"
+oftc.proxy
+oftc.ipv6
+oftc.ssl
+oftc.ssl_cert
+oftc.ssl_priorities
+oftc.ssl_dhkey_size
+oftc.ssl_fingerprint
+oftc.ssl_verify
+oftc.password
+oftc.capabilities
+oftc.sasl_mechanism
+oftc.sasl_username
+oftc.sasl_password
+oftc.sasl_key
+oftc.sasl_timeout
+oftc.sasl_fail
+oftc.autoconnect
+oftc.autoreconnect
+oftc.autoreconnect_delay
+oftc.nicks
+oftc.nicks_alternate
+oftc.username
+oftc.realname
+oftc.local_hostname
+oftc.usermode
+oftc.command
+oftc.command_delay
+oftc.autojoin
+oftc.autorejoin
+oftc.autorejoin_delay
+oftc.connection_timeout
+oftc.anti_flood_prio_high
+oftc.anti_flood_prio_low
+oftc.away_check
+oftc.away_check_max_nicks
+oftc.msg_kick
+oftc.msg_part
+oftc.msg_quit
+oftc.notify
+oftc.split_msg_max_length
+irchighwaynossl.addresses = "irc.irchighway.net"
+irchighwaynossl.proxy
+irchighwaynossl.ipv6
+irchighwaynossl.ssl
+irchighwaynossl.ssl_cert
+irchighwaynossl.ssl_priorities
+irchighwaynossl.ssl_dhkey_size
+irchighwaynossl.ssl_fingerprint
+irchighwaynossl.ssl_verify
+irchighwaynossl.password
+irchighwaynossl.capabilities
+irchighwaynossl.sasl_mechanism
+irchighwaynossl.sasl_username
+irchighwaynossl.sasl_password
+irchighwaynossl.sasl_key
+irchighwaynossl.sasl_timeout
+irchighwaynossl.sasl_fail
+irchighwaynossl.autoconnect = on
+irchighwaynossl.autoreconnect
+irchighwaynossl.autoreconnect_delay
+irchighwaynossl.nicks
+irchighwaynossl.nicks_alternate
+irchighwaynossl.username
+irchighwaynossl.realname
+irchighwaynossl.local_hostname
+irchighwaynossl.usermode
+irchighwaynossl.command
+irchighwaynossl.command_delay
+irchighwaynossl.autojoin
+irchighwaynossl.autorejoin
+irchighwaynossl.autorejoin_delay
+irchighwaynossl.connection_timeout
+irchighwaynossl.anti_flood_prio_high
+irchighwaynossl.anti_flood_prio_low
+irchighwaynossl.away_check
+irchighwaynossl.away_check_max_nicks
+irchighwaynossl.msg_kick
+irchighwaynossl.msg_part
+irchighwaynossl.msg_quit
+irchighwaynossl.notify
+irchighwaynossl.split_msg_max_length
