--- a/.config/weechat/weechat.conf
+++ b/.config/weechat/weechat.conf
@@ -210,7 +210,7 @@ command_inline = on
 default_template = "%(nicks)|%(irc_channels)"
 nick_add_space = on
 nick_case_sensitive = off
-nick_completer = ":"
+nick_completer = ": "
 nick_first_only = off
 nick_ignore_chars = "[]`_-^"
 partial_completion_alert = on
@@ -254,8 +254,8 @@ buflist.items = "buflist"
 buflist.position = left
 buflist.priority = 0
 buflist.separator = on
-buflist.size = 18
-buflist.size_max = 18
+buflist.size = 0
+buflist.size_max = 0
 buflist.type = root
 fset.color_bg = default
 fset.color_delim = cyan
@@ -347,7 +347,7 @@ urlselect_help.color_fg = default
 urlselect_help.conditions = "active"
 urlselect_help.filling_left_right = vertical
 urlselect_help.filling_top_bottom = columns_horizontal
-urlselect_help.hidden = off
+urlselect_help.hidden = on
 urlselect_help.items = "urlselect_help"
 urlselect_help.position = top
 urlselect_help.priority = 2998
@@ -373,38 +373,82 @@ urlselect_search.type = root
 [layout]
 default.buffer = "core;weechat;1"
 default.buffer = "core;highmon;2"
-default.buffer = "lua;matrix;3"
-default.buffer = "perl;highmon;4"
-default.buffer = "irc;server.freenode;5"
-default.buffer = "irc;freenode.#bspwm;6"
-default.buffer = "irc;freenode.##C;7"
-default.buffer = "irc;freenode.#cat-v;8"
-default.buffer = "irc;freenode.#go-nuts;9"
-default.buffer = "irc;freenode.#guix;10"
-default.buffer = "irc;freenode.#haskell;11"
-default.buffer = "irc;freenode.#haskell-blah;12"
-default.buffer = "irc;freenode.#racket;13"
-default.buffer = "irc;freenode.#xcb;14"
-default.buffer = "irc;server.irchighway;15"
-default.buffer = "irc;server.lainchan;16"
-default.buffer = "irc;server.mozilla;17"
-default.buffer = "irc;mozilla.#rust;18"
-default.buffer = "irc;server.nixers;19"
-default.buffer = "irc;server.overthewire;20"
-default.buffer = "irc;server.rizon;21"
-default.buffer = "irc;rizon.#code;22"
-default.buffer = "irc;rizon.#Hentai;23"
-default.buffer = "irc;rizon.#rice;24"
-default.buffer = "irc;server.unixchat;25"
+default.buffer = "fset;fset;3"
+default.buffer = "lua;matrix;4"
+default.buffer = "perl;highmon;5"
+default.buffer = "irc;server.freenode;6"
+default.buffer = "irc;freenode.#bspwm;7"
+default.buffer = "irc;freenode.##C;8"
+default.buffer = "irc;freenode.#cat-v;9"
+default.buffer = "irc;freenode.##cordance;10"
+default.buffer = "irc;freenode.#git;11"
+default.buffer = "irc;freenode.#go-nuts;12"
+default.buffer = "irc;freenode.#guile;13"
+default.buffer = "irc;freenode.#guix;14"
+default.buffer = "irc;freenode.#haskell;15"
+default.buffer = "irc;freenode.#lisp;16"
+default.buffer = "irc;freenode.#lispcafe;17"
+default.buffer = "irc;freenode.#nixos;18"
+default.buffer = "irc;freenode.#racket;19"
+default.buffer = "irc;freenode.#sway-devel;20"
+default.buffer = "irc;freenode.#xcb;21"
+default.buffer = "irc;server.irchighway;22"
+default.buffer = "irc;server.lainchan;23"
+default.buffer = "irc;server.mozilla;24"
+default.buffer = "irc;mozilla.#rust;25"
+default.buffer = "irc;mozilla.#rust-beginners;26"
+default.buffer = "irc;server.nixers;27"
+default.buffer = "irc;server.overthewire;28"
+default.buffer = "irc;server.rizon;29"
+default.buffer = "irc;rizon.#code;30"
+default.buffer = "irc;rizon.#Hentai;31"
+default.buffer = "irc;rizon.#rice;32"
+default.buffer = "irc;server.unixchat;33"
 default.window = "1;0;5;1;-;-"
-default.window = "2;1;0;0;irc;freenode.#go-nuts"
+default.window = "2;1;0;0;irc;freenode.#guix"
 default.window = "3;1;0;0;perl;highmon"
-default.current = on
+main.buffer = "core;weechat;1"
+main.buffer = "core;highmon;2"
+main.buffer = "lua;/dev/null;3"
+main.buffer = "lua;General;4"
+main.buffer = "lua;gwu;5"
+main.buffer = "lua;matrix;6"
+main.buffer = "perl;highmon;7"
+main.buffer = "irc;server.freenode;8"
+main.buffer = "irc;freenode.#bspwm;9"
+main.buffer = "irc;freenode.##C;10"
+main.buffer = "irc;freenode.#cat-v;11"
+main.buffer = "irc;freenode.##cordance;12"
+main.buffer = "irc;freenode.#go-nuts;13"
+main.buffer = "irc;freenode.#guile;14"
+main.buffer = "irc;freenode.#guix;15"
+main.buffer = "irc;freenode.#haskell;16"
+main.buffer = "irc;freenode.#lisp;17"
+main.buffer = "irc;freenode.#lispcafe;18"
+main.buffer = "irc;freenode.#nixos;19"
+main.buffer = "irc;freenode.#racket;20"
+main.buffer = "irc;freenode.#scheme;21"
+main.buffer = "irc;freenode.#xcb;22"
+main.buffer = "irc;server.irchighway;23"
+main.buffer = "irc;server.irchighwaynossl;24"
+main.buffer = "irc;server.lainchan;25"
+main.buffer = "irc;server.mozilla;26"
+main.buffer = "irc;mozilla.#rust;27"
+main.buffer = "irc;mozilla.#rust-beginners;28"
+main.buffer = "irc;server.nixers;29"
+main.buffer = "irc;server.overthewire;30"
+main.buffer = "irc;server.rizon;31"
+main.buffer = "irc;rizon.#code;32"
+main.buffer = "irc;rizon.#Hentai;33"
+main.buffer = "irc;rizon.#rice;34"
+main.buffer = "irc;server.unixchat;35"
+main.window = "1;0;0;0;lua;General"
+main.current = on
 
 [notify]
 
 [filter]
-joinquit = off;*;irc_join,irc_part,irc_quit;*
+joinquit = on;*;irc_join,irc_part,irc_quit;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
@@ -436,6 +480,8 @@ ctrl-X = "/input switch_active_buffer"
 ctrl-Y = "/input clipboard_paste"
 meta-meta-OP = "/bar scroll buflist * b"
 meta-meta-OQ = "/bar scroll buflist * e"
+meta-meta2-11~ = "/bar scroll buflist * b"
+meta-meta2-12~ = "/bar scroll buflist * e"
 meta-meta2-1~ = "/window scroll_top"
 meta-meta2-23~ = "/bar scroll nicklist * b"
 meta-meta2-24~ = "/bar scroll nicklist * e"
@@ -475,6 +521,10 @@ meta-Oa = "/input history_global_previous"
 meta-Ob = "/input history_global_next"
 meta-Oc = "/input move_next_word"
 meta-Od = "/input move_previous_word"
+meta2-11^ = "/bar scroll buflist * -100%"
+meta2-11~ = "/bar scroll buflist * -100%"
+meta2-12^ = "/bar scroll buflist * +100%"
+meta2-12~ = "/bar scroll buflist * +100%"
 meta2-15~ = "/buffer -1"
 meta2-17~ = "/buffer +1"
 meta2-18~ = "/window -1"
@@ -485,10 +535,14 @@ meta2-1;3C = "/buffer +1"
 meta2-1;3D = "/buffer -1"
 meta2-1;3F = "/window scroll_bottom"
 meta2-1;3H = "/window scroll_top"
+meta2-1;3P = "/bar scroll buflist * b"
+meta2-1;3Q = "/bar scroll buflist * e"
 meta2-1;5A = "/input history_global_previous"
 meta2-1;5B = "/input history_global_next"
 meta2-1;5C = "/input move_next_word"
 meta2-1;5D = "/input move_previous_word"
+meta2-1;5P = "/bar scroll buflist * -100%"
+meta2-1;5Q = "/bar scroll buflist * +100%"
 meta2-1~ = "/input move_beginning_of_line"
 meta2-200~ = "/input paste_start"
 meta2-201~ = "/input paste_stop"
@@ -519,6 +573,7 @@ meta2-[E = "/buffer -1"
 meta-_ = "/input redo"
 meta-a = "/input jump_smart"
 meta-b = "/input move_previous_word"
+meta-c = "/close"
 meta-d = "/input delete_next_word"
 meta-f = "/input move_next_word"
 meta-g = "/go"
