--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Adapta-Nokto-Eta
+gtk-theme-name=Raleigh
 gtk-icon-theme-name=Papirus-Adapta-Nokto
 gtk-font-name=Liberation Sans 9
 gtk-cursor-theme-name=Dot-Dark
