--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -19,13 +19,11 @@ audio_output {
 }
 
 audio_output {
-	type		"httpd"
-	name		"HTTP Stream"
-	encoder		"flac"
+	type        "httpd"
+	name        "ym_radio_lul"
+	encoder     "flac"
 	bind_to_address "any"
-	port		"8000"
+	port        "8000"
 	compression "0"
-	bitrate		"128"
-	format		"44100:16:2"
 	tags        "yes"
 }
