--- a/.config/weechat/weechat.conf
+++ b/.config/weechat/weechat.conf
@@ -291,7 +291,7 @@ nicklist.color_fg = default
 nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = off
+nicklist.hidden = on
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -413,36 +413,38 @@ main.buffer = "lua;/dev/null;3"
 main.buffer = "lua;General;4"
 main.buffer = "lua;gwu;5"
 main.buffer = "lua;matrix;6"
-main.buffer = "perl;highmon;7"
-main.buffer = "irc;server.freenode;8"
-main.buffer = "irc;freenode.#bspwm;9"
-main.buffer = "irc;freenode.##C;10"
-main.buffer = "irc;freenode.#cat-v;11"
-main.buffer = "irc;freenode.##cordance;12"
-main.buffer = "irc;freenode.#go-nuts;13"
-main.buffer = "irc;freenode.#guile;14"
-main.buffer = "irc;freenode.#guix;15"
-main.buffer = "irc;freenode.#haskell;16"
-main.buffer = "irc;freenode.#lisp;17"
-main.buffer = "irc;freenode.#lispcafe;18"
-main.buffer = "irc;freenode.#nixos;19"
-main.buffer = "irc;freenode.#racket;20"
-main.buffer = "irc;freenode.#scheme;21"
-main.buffer = "irc;freenode.#xcb;22"
-main.buffer = "irc;server.irchighway;23"
-main.buffer = "irc;server.irchighwaynossl;24"
-main.buffer = "irc;server.lainchan;25"
-main.buffer = "irc;server.mozilla;26"
-main.buffer = "irc;mozilla.#rust;27"
-main.buffer = "irc;mozilla.#rust-beginners;28"
-main.buffer = "irc;server.nixers;29"
-main.buffer = "irc;server.overthewire;30"
-main.buffer = "irc;server.rizon;31"
-main.buffer = "irc;rizon.#code;32"
-main.buffer = "irc;rizon.#Hentai;33"
-main.buffer = "irc;rizon.#rice;34"
-main.buffer = "irc;server.unixchat;35"
-main.window = "1;0;0;0;lua;General"
+main.buffer = "lua;System Alerts;7"
+main.buffer = "perl;highmon;8"
+main.buffer = "irc;server.freenode;9"
+main.buffer = "irc;freenode.#bspwm;10"
+main.buffer = "irc;freenode.##C;11"
+main.buffer = "irc;freenode.#cat-v;12"
+main.buffer = "irc;freenode.##cordance;13"
+main.buffer = "irc;freenode.#go-nuts;14"
+main.buffer = "irc;freenode.#guile;15"
+main.buffer = "irc;freenode.#guix;16"
+main.buffer = "irc;freenode.#haskell;17"
+main.buffer = "irc;freenode.#lisp;18"
+main.buffer = "irc;freenode.#lispcafe;19"
+main.buffer = "irc;freenode.#lispgames;20"
+main.buffer = "irc;freenode.#nixos;21"
+main.buffer = "irc;freenode.#racket;22"
+main.buffer = "irc;freenode.#scheme;23"
+main.buffer = "irc;freenode.#xcb;24"
+main.buffer = "irc;server.irchighway;25"
+main.buffer = "irc;server.irchighwaynossl;26"
+main.buffer = "irc;server.lainchan;27"
+main.buffer = "irc;server.mozilla;28"
+main.buffer = "irc;mozilla.#rust;29"
+main.buffer = "irc;mozilla.#rust-beginners;30"
+main.buffer = "irc;server.nixers;31"
+main.buffer = "irc;server.overthewire;32"
+main.buffer = "irc;server.rizon;33"
+main.buffer = "irc;rizon.#code;34"
+main.buffer = "irc;rizon.#Hentai;35"
+main.buffer = "irc;rizon.#rice;36"
+main.buffer = "irc;server.unixchat;37"
+main.window = "1;0;0;0;irc;freenode.#nixos"
 main.current = on
 
 [notify]
