--- a/.ghc/ghci.conf
+++ b/.ghc/ghci.conf
@@ -1,9 +1,7 @@
 :set prompt "\ESC[1;34m\STX%s\n\ESC[0;34m\STXλ> \ESC[m\STX"
 :set prompt-cont "\ESC[0;34m\STXλ: \ESC[m\STX"
-:set +m
-:set +t
-:set -XTypeApplications
-:set -XOverloadedStrings
+:set +m +t
+:set -XTypeApplications -XOverloadedStrings -XBangPatterns
 :set -fwarn-unused-binds -fwarn-unused-imports
-:def hoogle \s -> return $ ":! hoogle search -cl --count=15 \"" ++ s ++ "\""
-:def doc \s -> return $ ":! hoogle search -cl --info \"" ++ s ++ "\""
+:def hoogle \s -> return $ ":! hoogle search --color l --count=15 \"" ++ s ++ "\""
+:def doc \s -> return $ ":! hoogle search --color -l --info \"" ++ s ++ "\""
