--- a/.config/weechat/weechat.conf
+++ b/.config/weechat/weechat.conf
@@ -291,7 +291,7 @@ nicklist.color_fg = default
 nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = on
+nicklist.hidden = off
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -426,25 +426,24 @@ main.buffer = "irc;freenode.#guix;16"
 main.buffer = "irc;freenode.#haskell;17"
 main.buffer = "irc;freenode.#lisp;18"
 main.buffer = "irc;freenode.#lispcafe;19"
-main.buffer = "irc;freenode.#lispgames;20"
-main.buffer = "irc;freenode.#nixos;21"
-main.buffer = "irc;freenode.#racket;22"
-main.buffer = "irc;freenode.#scheme;23"
-main.buffer = "irc;freenode.#xcb;24"
-main.buffer = "irc;server.irchighway;25"
-main.buffer = "irc;server.irchighwaynossl;26"
-main.buffer = "irc;server.lainchan;27"
-main.buffer = "irc;server.mozilla;28"
-main.buffer = "irc;mozilla.#rust;29"
-main.buffer = "irc;mozilla.#rust-beginners;30"
-main.buffer = "irc;server.nixers;31"
-main.buffer = "irc;server.overthewire;32"
-main.buffer = "irc;server.rizon;33"
-main.buffer = "irc;rizon.#code;34"
-main.buffer = "irc;rizon.#Hentai;35"
-main.buffer = "irc;rizon.#rice;36"
-main.buffer = "irc;server.unixchat;37"
-main.window = "1;0;0;0;irc;freenode.#nixos"
+main.buffer = "irc;freenode.#nixos;20"
+main.buffer = "irc;freenode.#racket;21"
+main.buffer = "irc;freenode.#scheme;22"
+main.buffer = "irc;freenode.#xcb;23"
+main.buffer = "irc;server.irchighway;24"
+main.buffer = "irc;server.irchighwaynossl;25"
+main.buffer = "irc;server.lainchan;26"
+main.buffer = "irc;server.mozilla;27"
+main.buffer = "irc;mozilla.#rust;28"
+main.buffer = "irc;mozilla.#rust-beginners;29"
+main.buffer = "irc;server.nixers;30"
+main.buffer = "irc;server.overthewire;31"
+main.buffer = "irc;server.rizon;32"
+main.buffer = "irc;rizon.#code;33"
+main.buffer = "irc;rizon.#Hentai;34"
+main.buffer = "irc;rizon.#rice;35"
+main.buffer = "irc;server.unixchat;36"
+main.window = "1;0;0;0;irc;rizon.#code"
 main.current = on
 
 [notify]
