--- a/.config/weechat/irc.conf
+++ b/.config/weechat/irc.conf
@@ -180,7 +180,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin = "##C,#go-nuts,#cat-v,#haskell,#xcb,#bspwm,#guile,##cordance,#scheme,#guix,#racket,#nixos,#lispcafe,#lisp"
+freenode.autojoin = "##C,#go-nuts,#cat-v,#haskell,#xcb,#bspwm,#guile,##cordance,#scheme,#guix,#racket,#nixos,#lispcafe,#lisp,#clojure,#suckless"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
