--- a/.config/weechat/weechat.conf
+++ b/.config/weechat/weechat.conf
@@ -35,6 +35,7 @@ buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = prefix_message
 buffer_time_format = " %H:%M:%S"
+buffer_time_same = ""
 color_basic_force_bold = off
 color_inactive_buffer = off
 color_inactive_message = off
@@ -111,6 +112,7 @@ prefix_join = "-->"
 prefix_network = "--"
 prefix_quit = "<--"
 prefix_same_nick = ""
+prefix_same_nick_middle = ""
 prefix_suffix = "│"
 quote_nick_prefix = "<"
 quote_nick_suffix = ">"
@@ -291,7 +293,7 @@ nicklist.color_fg = default
 nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = off
+nicklist.hidden = on
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -409,40 +411,37 @@ default.window = "2;1;0;0;irc;freenode.#guix"
 default.window = "3;1;0;0;perl;highmon"
 main.buffer = "core;weechat;1"
 main.buffer = "core;highmon;2"
-main.buffer = "lua;/dev/null;3"
-main.buffer = "lua;General;4"
-main.buffer = "lua;gwu;5"
-main.buffer = "lua;matrix;6"
-main.buffer = "lua;System Alerts;7"
-main.buffer = "perl;highmon;8"
-main.buffer = "irc;server.freenode;9"
-main.buffer = "irc;freenode.#bspwm;10"
-main.buffer = "irc;freenode.##C;11"
-main.buffer = "irc;freenode.#cat-v;12"
-main.buffer = "irc;freenode.##cordance;13"
-main.buffer = "irc;freenode.#go-nuts;14"
-main.buffer = "irc;freenode.#guile;15"
-main.buffer = "irc;freenode.#guix;16"
-main.buffer = "irc;freenode.#haskell;17"
-main.buffer = "irc;freenode.#lisp;18"
-main.buffer = "irc;freenode.#lispcafe;19"
-main.buffer = "irc;freenode.#nixos;20"
-main.buffer = "irc;freenode.#racket;21"
-main.buffer = "irc;freenode.#scheme;22"
-main.buffer = "irc;freenode.#xcb;23"
-main.buffer = "irc;server.irchighway;24"
-main.buffer = "irc;server.irchighwaynossl;25"
-main.buffer = "irc;server.lainchan;26"
-main.buffer = "irc;server.mozilla;27"
-main.buffer = "irc;mozilla.#rust;28"
-main.buffer = "irc;mozilla.#rust-beginners;29"
-main.buffer = "irc;server.nixers;30"
-main.buffer = "irc;server.overthewire;31"
-main.buffer = "irc;server.rizon;32"
-main.buffer = "irc;rizon.#code;33"
-main.buffer = "irc;rizon.#Hentai;34"
-main.buffer = "irc;rizon.#rice;35"
-main.buffer = "irc;server.unixchat;36"
+main.buffer = "perl;highmon;3"
+main.buffer = "irc;server.freenode;4"
+main.buffer = "irc;freenode.#bspwm;5"
+main.buffer = "irc;freenode.##C;6"
+main.buffer = "irc;freenode.#cat-v;7"
+main.buffer = "irc;freenode.#clojure;8"
+main.buffer = "irc;freenode.##cordance;9"
+main.buffer = "irc;freenode.#go-nuts;10"
+main.buffer = "irc;freenode.#guile;11"
+main.buffer = "irc;freenode.#guix;12"
+main.buffer = "irc;freenode.#haskell;13"
+main.buffer = "irc;freenode.#lisp;14"
+main.buffer = "irc;freenode.#lispcafe;15"
+main.buffer = "irc;freenode.#nixos;16"
+main.buffer = "irc;freenode.#racket;17"
+main.buffer = "irc;freenode.#scheme;18"
+main.buffer = "irc;freenode.#suckless;19"
+main.buffer = "irc;freenode.#xcb;20"
+main.buffer = "irc;server.irchighway;21"
+main.buffer = "irc;server.irchighwaynossl;22"
+main.buffer = "irc;server.lainchan;23"
+main.buffer = "irc;server.mozilla;24"
+main.buffer = "irc;mozilla.#rust;25"
+main.buffer = "irc;mozilla.#rust-beginners;26"
+main.buffer = "irc;server.nixers;27"
+main.buffer = "irc;server.overthewire;28"
+main.buffer = "irc;server.rizon;29"
+main.buffer = "irc;rizon.#code;30"
+main.buffer = "irc;rizon.#Hentai;31"
+main.buffer = "irc;rizon.#rice;32"
+main.buffer = "irc;server.unixchat;33"
 main.window = "1;0;0;0;irc;rizon.#code"
 main.current = on
 
@@ -686,6 +685,7 @@ meta-k = "/input grab_key_command"
 meta-l = "/bar toggle nicklist"
 meta-m = "/mouse toggle"
 meta-n = "/bar toggle buflist"
+meta-o = "/input insert /open_url\x20"
 meta-p = "/window scroll_previous_highlight"
 meta-r = "/input delete_line"
 meta-s = "/mute aspell toggle"
