--- a/.ghc/ghci.conf
+++ b/.ghc/ghci.conf
@@ -1,6 +1,6 @@
 :set prompt "\ESC[1;34m\STX%s\n\ESC[0;34m\STXλ> \ESC[m\STX"
 :set prompt-cont "\ESC[0;34m\STXλ: \ESC[m\STX"
-:set +m +t
+:set +m +t +s
 :set -XTypeApplications -XOverloadedStrings -XBangPatterns
 :set -fwarn-unused-binds -fwarn-unused-imports
 :def hoogle \s -> return $ ":! hoogle search --color l --count=15 \"" ++ s ++ "\""
