--- a/.config/weechat/weechat.conf
+++ b/.config/weechat/weechat.conf
@@ -412,37 +412,39 @@ default.window = "3;1;0;0;perl;highmon"
 main.buffer = "core;weechat;1"
 main.buffer = "core;highmon;2"
 main.buffer = "perl;highmon;3"
-main.buffer = "irc;server.freenode;4"
-main.buffer = "irc;freenode.#bspwm;5"
-main.buffer = "irc;freenode.##C;6"
-main.buffer = "irc;freenode.#cat-v;7"
-main.buffer = "irc;freenode.#clojure;8"
-main.buffer = "irc;freenode.##cordance;9"
-main.buffer = "irc;freenode.#go-nuts;10"
-main.buffer = "irc;freenode.#guile;11"
-main.buffer = "irc;freenode.#guix;12"
-main.buffer = "irc;freenode.#haskell;13"
-main.buffer = "irc;freenode.#lisp;14"
-main.buffer = "irc;freenode.#lispcafe;15"
-main.buffer = "irc;freenode.#nixos;16"
-main.buffer = "irc;freenode.#racket;17"
-main.buffer = "irc;freenode.#scheme;18"
-main.buffer = "irc;freenode.#suckless;19"
-main.buffer = "irc;freenode.#xcb;20"
-main.buffer = "irc;server.irchighway;21"
-main.buffer = "irc;server.irchighwaynossl;22"
-main.buffer = "irc;server.lainchan;23"
-main.buffer = "irc;server.mozilla;24"
-main.buffer = "irc;mozilla.#rust;25"
-main.buffer = "irc;mozilla.#rust-beginners;26"
-main.buffer = "irc;server.nixers;27"
-main.buffer = "irc;server.overthewire;28"
-main.buffer = "irc;server.rizon;29"
-main.buffer = "irc;rizon.#code;30"
-main.buffer = "irc;rizon.#Hentai;31"
-main.buffer = "irc;rizon.#rice;32"
-main.buffer = "irc;server.unixchat;33"
-main.window = "1;0;0;0;irc;rizon.#code"
+main.buffer = "xfer;xfer.list;4"
+main.buffer = "irc;server.freenode;5"
+main.buffer = "irc;freenode.#bspwm;6"
+main.buffer = "irc;freenode.##C;7"
+main.buffer = "irc;freenode.#cat-v;8"
+main.buffer = "irc;freenode.#clojure;9"
+main.buffer = "irc;freenode.##cordance;10"
+main.buffer = "irc;freenode.#go-nuts;11"
+main.buffer = "irc;freenode.#guile;12"
+main.buffer = "irc;freenode.#guix;13"
+main.buffer = "irc;freenode.#haskell;14"
+main.buffer = "irc;freenode.#lisp;15"
+main.buffer = "irc;freenode.#lispcafe;16"
+main.buffer = "irc;freenode.#nixos;17"
+main.buffer = "irc;freenode.#racket;18"
+main.buffer = "irc;freenode.#scheme;19"
+main.buffer = "irc;freenode.#suckless;20"
+main.buffer = "irc;freenode.#xcb;21"
+main.buffer = "irc;server.irchighway;22"
+main.buffer = "irc;server.irchighwaynossl;23"
+main.buffer = "irc;server.lainchan;24"
+main.buffer = "irc;server.mozilla;25"
+main.buffer = "irc;mozilla.#rust;26"
+main.buffer = "irc;mozilla.#rust-beginners;27"
+main.buffer = "irc;server.nixers;28"
+main.buffer = "irc;server.overthewire;29"
+main.buffer = "irc;server.rizon;30"
+main.buffer = "irc;rizon.#code;31"
+main.buffer = "irc;rizon.#Hentai;32"
+main.buffer = "irc;rizon.#HorribleSubs;33"
+main.buffer = "irc;rizon.#rice;34"
+main.buffer = "irc;server.unixchat;35"
+main.window = "1;0;0;0;irc;freenode.#guix"
 main.current = on
 
 [notify]
