--- a/.config/weechat/weechat.conf
+++ b/.config/weechat/weechat.conf
@@ -411,40 +411,45 @@ default.window = "2;1;0;0;irc;freenode.#guix"
 default.window = "3;1;0;0;perl;highmon"
 main.buffer = "core;weechat;1"
 main.buffer = "core;highmon;2"
-main.buffer = "perl;highmon;3"
-main.buffer = "xfer;xfer.list;4"
-main.buffer = "irc;server.freenode;5"
-main.buffer = "irc;freenode.#bspwm;6"
-main.buffer = "irc;freenode.##C;7"
-main.buffer = "irc;freenode.#cat-v;8"
-main.buffer = "irc;freenode.#clojure;9"
-main.buffer = "irc;freenode.##cordance;10"
-main.buffer = "irc;freenode.#go-nuts;11"
-main.buffer = "irc;freenode.#guile;12"
-main.buffer = "irc;freenode.#guix;13"
-main.buffer = "irc;freenode.#haskell;14"
-main.buffer = "irc;freenode.#lisp;15"
-main.buffer = "irc;freenode.#lispcafe;16"
-main.buffer = "irc;freenode.#nixos;17"
-main.buffer = "irc;freenode.#racket;18"
-main.buffer = "irc;freenode.#scheme;19"
-main.buffer = "irc;freenode.#suckless;20"
-main.buffer = "irc;freenode.#xcb;21"
-main.buffer = "irc;server.irchighway;22"
-main.buffer = "irc;server.irchighwaynossl;23"
-main.buffer = "irc;server.lainchan;24"
-main.buffer = "irc;server.mozilla;25"
-main.buffer = "irc;mozilla.#rust;26"
-main.buffer = "irc;mozilla.#rust-beginners;27"
-main.buffer = "irc;server.nixers;28"
-main.buffer = "irc;server.overthewire;29"
-main.buffer = "irc;server.rizon;30"
-main.buffer = "irc;rizon.#code;31"
-main.buffer = "irc;rizon.#Hentai;32"
-main.buffer = "irc;rizon.#HorribleSubs;33"
-main.buffer = "irc;rizon.#rice;34"
-main.buffer = "irc;server.unixchat;35"
-main.window = "1;0;0;0;irc;freenode.#guix"
+main.buffer = "lua;/dev/null;3"
+main.buffer = "lua;General;4"
+main.buffer = "lua;gwu;5"
+main.buffer = "lua;matrix;6"
+main.buffer = "lua;System Alerts;7"
+main.buffer = "perl;highmon;8"
+main.buffer = "xfer;xfer.list;9"
+main.buffer = "irc;server.freenode;10"
+main.buffer = "irc;freenode.#bspwm;11"
+main.buffer = "irc;freenode.##C;12"
+main.buffer = "irc;freenode.#cat-v;13"
+main.buffer = "irc;freenode.#clojure;14"
+main.buffer = "irc;freenode.##cordance;15"
+main.buffer = "irc;freenode.#go-nuts;16"
+main.buffer = "irc;freenode.#guile;17"
+main.buffer = "irc;freenode.#guix;18"
+main.buffer = "irc;freenode.#haskell;19"
+main.buffer = "irc;freenode.#lisp;20"
+main.buffer = "irc;freenode.#lispcafe;21"
+main.buffer = "irc;freenode.#nixos;22"
+main.buffer = "irc;freenode.#racket;23"
+main.buffer = "irc;freenode.#scheme;24"
+main.buffer = "irc;freenode.#suckless;25"
+main.buffer = "irc;freenode.#xcb;26"
+main.buffer = "irc;server.irchighway;27"
+main.buffer = "irc;server.irchighwaynossl;28"
+main.buffer = "irc;server.lainchan;29"
+main.buffer = "irc;server.mozilla;30"
+main.buffer = "irc;mozilla.#rust;31"
+main.buffer = "irc;mozilla.#rust-beginners;32"
+main.buffer = "irc;server.nixers;33"
+main.buffer = "irc;server.overthewire;34"
+main.buffer = "irc;server.rizon;35"
+main.buffer = "irc;rizon.#code;36"
+main.buffer = "irc;rizon.#Hentai;37"
+main.buffer = "irc;rizon.#HorribleSubs;38"
+main.buffer = "irc;rizon.#rice;39"
+main.buffer = "irc;server.unixchat;40"
+main.window = "1;0;0;0;irc;rizon.#HorribleSubs"
 main.current = on
 
 [notify]
