--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -7,23 +7,23 @@ state_file         "~/.config/mpd/state"
 sticker_file       "~/.config/mpd/sticker.sql"
 
 audio_output {
-        type            "pulse"
-        name            "pulse audio"
+	type "pulse"
+	name "pulseaudio"
 }
 
 audio_output {
-    type                    "fifo"
-    name                    "my_fifo"
-    path                    "/tmp/mpd.fifo"
-    format                  "44100:16:2"
+	type   "fifo"
+	name   "fifo"
+	path   "/tmp/mpd.fifo"
+	format "44100:16:2"
 }
 
 audio_output {
-	type        "httpd"
-	name        "ym_radio_lul"
-	encoder     "flac"
+	type            "httpd"
+	name            "idk"
+	encoder         "flac"
 	bind_to_address "any"
-	port        "8000"
-	compression "0"
-	tags        "yes"
+	port            "8000"
+	compression     "0"
+	tags            "yes"
 }
