--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -127,7 +127,8 @@ font:
   # scale_with_dpi: true
 
 # Display the time it takes to redraw each frame.
-render_timer: false
+debug:
+  render_timer: false
 
 # Use custom cursor colors. If `true`, the `colors.cursor.foreground` and
 # `colors.cursor.background` colors will be used to display the cursor.
