--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -145,7 +145,7 @@ header_visibility = no
 statusbar_visibility = yes
 titles_visibility = yes
 #lines_scrolled = 2
-lyrics_fetchers = lyricwiki, azlyrics, genius, sing365, lyricsmania, metrolyrics, justsomelyrics, jahlyrics, plyrics, tekstowo, internet
+#lyrics_fetchers = lyricwiki, azlyrics, genius, sing365, lyricsmania, metrolyrics, justsomelyrics, jahlyrics, plyrics, tekstowo, internet */
 follow_now_playing_lyrics = no
 lastfm_preferred_language = en
 show_hidden_files_in_local_browser = no
