--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -90,7 +90,7 @@ font:
   normal:
     family: curie
     # The `style` can be specified to pick a specific face.
-    # style: Regular
+    style: Regular
 
   # Bold font face
   bold:
@@ -99,13 +99,13 @@ font:
     style: Regular
 
   # Italic font face
-  italic:
-    family: curie
+  # italic:
+  #   family: curie
     # The `style` can be specified to pick a specific face.
     # style: Italic
 
   # Point size
-  size: 12.0
+  size: 11.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
