--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -9,8 +9,10 @@ deband-iterations=4
 sub-auto=fuzzy
 dither-depth=auto
 script-opts=chapterskip-skip=opening;ending;more;categories
+# scale=lanczos
+# cscale=lanczos
 # scale=ewa_lanczossharp
 # cscale=ewa_lanczossharp
-# video-sync=display-resample
+video-sync=display-resample
 # interpolation
 # tscale=oversample
