--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -13,6 +13,13 @@ script-opts=chapterskip-skip=opening;ending;more;categories
 # cscale=lanczos
 # scale=ewa_lanczossharp
 # cscale=ewa_lanczossharp
-video-sync=display-resample
+# video-sync=display-resample
 # interpolation
 # tscale=oversample
+#
+## uosc provides seeking & volume indicators (via flash-timeline and flash-volume commands)
+# if you decide to use them, you don't need osd-bar
+osd-bar=no
+
+# uosc will draw its own window controls and border if you disable window border
+border=no
